# spotify_web_api

./: .env.template  .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
dev/: save_token.sh
endpoint_derive/: Cargo.toml
endpoint_derive/src/: lib.rs
examples/: README.md  creds.rs  creds_async.rs  creds_custom_endpoint.rs  creds_custom_model.rs  creds_paging.rs  creds_paging_custom_model.rs  pkce.rs  pkce_async.rs  pkce_refresh_token.rs  pkce_save_token.rs  pkce_server.rs  pkce_token_refresh_handler.rs  pkce_with_token.rs
src/: api.rs  auth.rs  lib.rs  model.rs  spotify.rs  test.rs
src/api/: README.md  albums.rs  artists.rs  audiobooks.rs  categories.rs  chapters.rs  client.rs  common.rs  endpoint.rs  endpoints.rs  episodes.rs  error.rs  genres.rs  ignore.rs  markets.rs  paged.rs  params.rs  player.rs  playlists.rs  query.rs  raw.rs  search.rs  shows.rs  tracks.rs  users.rs
src/api/albums/: check_user_saved_albums.rs  get_album.rs  get_album_tracks.rs  get_new_releases.rs  get_several_albums.rs  get_user_saved_albums.rs  remove_user_saved_albums.rs  save_albums_for_current_user.rs
src/api/artists/: get_artist.rs  get_artist_albums.rs  get_artist_top_tracks.rs  (+1 more)
src/auth/: client_credentials.rs  pkce.rs  scopes.rs
src/model/: albums.rs  artists.rs  audiobooks.rs  categories.rs  chapters.rs  episodes.rs  genres.rs  id.rs  markets.rs  misc.rs  player.rs  playlists.rs  search.rs  shows.rs  token.rs  tracks.rs  users.rs
src/test/: client.rs
(+75 files in other folders)
