[package]
name = "endpoint_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Macros implementation of #[derive(Endpoint)]"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
darling = "0.20.10"
proc-macro2 = { version = "1.0.92", features = ["proc-macro"] }
syn = { version = "2.0.90", features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
quote = { version = "1.0.37", features = ["proc-macro"] }

[lints]
workspace = true
